[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bambubridge"
dynamic = ["version"]
description = "FastAPI application for Bambu LAN bridge."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["api", "bridge", "config", "state", "__init__"]

[tool.setuptools.dynamic]
version = { attr = "__init__.__version__" }
