[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bambubridge"
dynamic = ["version"]
description = "FastAPI application for Bambu LAN bridge."
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
fastapi = ">=0.116,<0.117"
starlette = ">=0.47,<0.48"
uvicorn = { version = ">=0.30,<0.31", extras = ["standard"] }
pybambu = ">=1.0,<1.1"
paho-mqtt = "<2"
requests = ">=2.31,<3"
python-dateutil = ">=2.8.2,<3"
packaging = ">=23,<25"
swagger-ui-bundle = ">=1.1,<1.2"

[project.scripts]
bambubridge = "bridge:main"

[tool.setuptools]
py-modules = ["api", "bridge", "config", "state", "__init__"]

[tool.setuptools.dynamic]
version = { attr = "__init__.__version__" }
