[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bambubridge"
dynamic = ["version"]
description = "FastAPI application for Bambu LAN bridge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<0.117",
    "starlette>=0.47,<0.48",
    "uvicorn[standard]>=0.30,<0.31",
    "pybambu>=1.0,<1.1",
    "paho-mqtt<2",
    "requests>=2.31,<3",
    "python-dateutil>=2.8.2,<3",
    "packaging>=23,<25",
    "swagger-ui-bundle>=1.1,<1.2",
    "aiorwlock>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
]

[project.scripts]
bambubridge = "bridge:main"

[tool.setuptools]
py-modules = ["api", "bridge", "config", "state", "__init__"]

[tool.setuptools.dynamic]
version = { attr = "__init__.__version__" }
